src/test/deca/context/valid/langage_essentiel/test_override.deca
class A {
    A f(float x, A other) {}
    Object g(){}

}
class B extends A {
    // Override avec type de reour compatible
    B f(float x, A other) {}
    A g(){}
}